Use JRE10 to improve startup times